--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
+    "echarts": "^5.3.3",
     "element-ui": "^2.3.4",
     "mockjs": "^1.1.0",
     "vue": "^2.5.2",
