--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-polyfill": "^6.26.0",
     "echarts": "^5.3.3",
     "element-ui": "^2.3.4",
+    "mini-css-extract-plugin": "^0.9.0",
     "mockjs": "^1.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
@@ -49,7 +51,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "1.3.1",
     "lint-staged": "^8.1.5",
     "node-notifier": "^5.1.2",
@@ -66,12 +68,13 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^15.7.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
